; ModuleID = '/home/carl/AnghaBench/git/extr_kwset.c_obstack_chunk_alloc.c'
source_filename = "/home/carl/AnghaBench/git/extr_kwset.c_obstack_chunk_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"Cannot allocate a negative amount: %ld\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @obstack_chunk_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @obstack_chunk_alloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @BUG(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i64 %6)
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i64, i64* %2, align 8
  %10 = call i8* @xmalloc(i64 %9)
  ret i8* %10
}

declare dso_local i32 @BUG(i8*, i64) #1

declare dso_local i8* @xmalloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
